--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.psd filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
 *.tif* filter=lfs diff=lfs merge=lfs -text
+*.prefab filter=lfs diff=lfs merge=lfs -text
